syntax = "proto3";

package ai_poi.user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/FACorreiaa/loci-proto/proto/user/v1";

// UserService provides user profile and preference management
service UserService {
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);

  // Search profile management
  rpc GetSearchProfiles(GetSearchProfilesRequest) returns (GetSearchProfilesResponse);
  rpc GetSearchProfile(GetSearchProfileRequest) returns (GetSearchProfileResponse);
  rpc CreateSearchProfile(CreateSearchProfileRequest) returns (CreateSearchProfileResponse);
  rpc UpdateSearchProfile(UpdateSearchProfileRequest) returns (UpdateSearchProfileResponse);
  rpc DeleteSearchProfile(DeleteSearchProfileRequest) returns (DeleteSearchProfileResponse);
  rpc GetDefaultProfile(GetDefaultProfileRequest) returns (GetDefaultProfileResponse);
  rpc SetDefaultProfile(SetDefaultProfileRequest) returns (SetDefaultProfileResponse);

  // Interests management
  rpc GetInterests(GetInterestsRequest) returns (GetInterestsResponse);
  rpc CreateInterest(CreateInterestRequest) returns (CreateInterestResponse);
  rpc UpdateInterest(UpdateInterestRequest) returns (UpdateInterestResponse);
  rpc DeleteInterest(DeleteInterestRequest) returns (DeleteInterestResponse);

  // Tags management
  rpc GetTags(GetTagsRequest) returns (GetTagsResponse);
  rpc GetTag(GetTagRequest) returns (GetTagResponse);
  rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
  rpc UpdateTag(UpdateTagRequest) returns (UpdateTagResponse);
  rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse);
}

// Core user profile
message UserProfile {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string bio = 6;
  string avatar_url = 7;
  string location = 8;
  string timezone = 9;
  string language = 10;
  string currency = 11;
  google.protobuf.Timestamp date_of_birth = 12;
  string phone = 13;
  bool email_verified = 14;
  bool phone_verified = 15;
  NotificationPreferences notification_preferences = 16;
  PrivacySettings privacy_settings = 17;
  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
}

// Notification preferences
message NotificationPreferences {
  bool email_notifications = 1;
  bool push_notifications = 2;
  bool sms_notifications = 3;
  bool marketing_emails = 4;
  bool itinerary_updates = 5;
  bool poi_recommendations = 6;
  bool social_activity = 7;
}

// Privacy settings
message PrivacySettings {
  bool profile_public = 1;
  bool show_location = 2;
  bool show_activity = 3;
  bool allow_friend_requests = 4;
  bool show_in_search = 5;
}

// Search profile for personalized recommendations
message SearchProfile {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  bool is_default = 5;
  TravelPreferences travel_preferences = 6;
  repeated string interests = 7;
  repeated string tags = 8;
  BudgetPreferences budget_preferences = 9;
  AccessibilityNeeds accessibility_needs = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// Travel preferences
message TravelPreferences {
  string travel_style = 1; // "adventure", "relaxed", "cultural", "family", "business"
  repeated string preferred_activities = 2;
  repeated string cuisine_preferences = 3;
  repeated string accommodation_types = 4;
  string pace = 5; // "slow", "moderate", "fast"
  string group_size = 6; // "solo", "couple", "small_group", "large_group"
  int32 max_walking_distance_meters = 7;
  bool prefers_popular_spots = 8;
  bool prefers_hidden_gems = 9;
  string transportation_preference = 10; // "walking", "public", "car", "mixed"
}

// Budget preferences
message BudgetPreferences {
  string budget_level = 1; // "budget", "mid_range", "luxury"
  string currency = 2;
  double daily_budget = 3;
  double accommodation_budget = 4;
  double food_budget = 5;
  double activity_budget = 6;
  double transport_budget = 7;
}

// Accessibility needs
message AccessibilityNeeds {
  bool wheelchair_accessible = 1;
  bool hearing_assistance = 2;
  bool visual_assistance = 3;
  bool mobility_assistance = 4;
  repeated string dietary_restrictions = 5;
  repeated string special_requirements = 6;
}

// User interests
message Interest {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string category = 4;
  string description = 5;
  int32 weight = 6; // 1-10, importance level
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// User tags
message Tag {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string color = 4;
  string description = 5;
  int32 usage_count = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// User statistics
message UserStats {
  int32 total_searches = 1;
  int32 saved_pois = 2;
  int32 created_itineraries = 3;
  int32 countries_visited = 4;
  int32 cities_explored = 5;
  google.protobuf.Timestamp last_activity = 6;
  google.protobuf.Timestamp member_since = 7;
}

// Request/Response messages
message GetUserProfileRequest {
  string user_id = 1;
  BaseRequest request = 100;
}

message GetUserProfileResponse {
  UserProfile profile = 1;
  UserStats stats = 2;
  BaseResponse response = 100;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  UserProfile profile = 2;
  repeated string update_fields = 3; // Field mask for partial updates
  BaseRequest request = 100;
}

message UpdateUserProfileResponse {
  bool success = 1;
  string message = 2;
  UserProfile profile = 3;
  BaseResponse response = 100;
}

// Search profiles
message GetSearchProfilesRequest {
  string user_id = 1;
  BaseRequest request = 100;
}

message GetSearchProfilesResponse {
  repeated SearchProfile profiles = 1;
  string default_profile_id = 2;
  BaseResponse response = 100;
}

message GetSearchProfileRequest {
  string user_id = 1;
  string profile_id = 2;
  BaseRequest request = 100;
}

message GetSearchProfileResponse {
  SearchProfile profile = 1;
  BaseResponse response = 100;
}

message CreateSearchProfileRequest {
  string user_id = 1;
  SearchProfile profile = 2;
  BaseRequest request = 100;
}

message CreateSearchProfileResponse {
  bool success = 1;
  string message = 2;
  SearchProfile profile = 3;
  BaseResponse response = 100;
}

message UpdateSearchProfileRequest {
  string user_id = 1;
  string profile_id = 2;
  SearchProfile profile = 3;
  repeated string update_fields = 4;
  BaseRequest request = 100;
}

message UpdateSearchProfileResponse {
  bool success = 1;
  string message = 2;
  SearchProfile profile = 3;
  BaseResponse response = 100;
}

message DeleteSearchProfileRequest {
  string user_id = 1;
  string profile_id = 2;
  BaseRequest request = 100;
}

message DeleteSearchProfileResponse {
  bool success = 1;
  string message = 2;
  BaseResponse response = 100;
}

message GetDefaultProfileRequest {
  string user_id = 1;
  BaseRequest request = 100;
}

message GetDefaultProfileResponse {
  SearchProfile profile = 1;
  BaseResponse response = 100;
}

message SetDefaultProfileRequest {
  string user_id = 1;
  string profile_id = 2;
  BaseRequest request = 100;
}

message SetDefaultProfileResponse {
  bool success = 1;
  string message = 2;
  BaseResponse response = 100;
}

// Interests
message GetInterestsRequest {
  string user_id = 1;
  BaseRequest request = 100;
}

message GetInterestsResponse {
  repeated Interest interests = 1;
  BaseResponse response = 100;
}

message CreateInterestRequest {
  string user_id = 1;
  Interest interest = 2;
  BaseRequest request = 100;
}

message CreateInterestResponse {
  bool success = 1;
  string message = 2;
  Interest interest = 3;
  BaseResponse response = 100;
}

message UpdateInterestRequest {
  string user_id = 1;
  string interest_id = 2;
  Interest interest = 3;
  BaseRequest request = 100;
}

message UpdateInterestResponse {
  bool success = 1;
  string message = 2;
  Interest interest = 3;
  BaseResponse response = 100;
}

message DeleteInterestRequest {
  string user_id = 1;
  string interest_id = 2;
  BaseRequest request = 100;
}

message DeleteInterestResponse {
  bool success = 1;
  string message = 2;
  BaseResponse response = 100;
}

// Tags
message GetTagsRequest {
  string user_id = 1;
  BaseRequest request = 100;
}

message GetTagsResponse {
  repeated Tag tags = 1;
  BaseResponse response = 100;
}

message GetTagRequest {
  string user_id = 1;
  string tag_id = 2;
  BaseRequest request = 100;
}

message GetTagResponse {
  Tag tag = 1;
  BaseResponse response = 100;
}

message CreateTagRequest {
  string user_id = 1;
  Tag tag = 2;
  BaseRequest request = 100;
}

message CreateTagResponse {
  bool success = 1;
  string message = 2;
  Tag tag = 3;
  BaseResponse response = 100;
}

message UpdateTagRequest {
  string user_id = 1;
  string tag_id = 2;
  Tag tag = 3;
  BaseRequest request = 100;
}

message UpdateTagResponse {
  bool success = 1;
  string message = 2;
  Tag tag = 3;
  BaseResponse response = 100;
}

message DeleteTagRequest {
  string user_id = 1;
  string tag_id = 2;
  BaseRequest request = 100;
}

message DeleteTagResponse {
  bool success = 1;
  string message = 2;
  BaseResponse response = 100;
}

message BaseRequest {
  string downstream = 998;
  string request_id = 999;
}

message BaseResponse {
  string upstream = 998;
  string request_id = 999;
  string status = 1000;
}
